fix bug with z-indexes

--- a/src/components/Header/Header.module.css
+++ b/src/components/Header/Header.module.css
@@ -18,7 +18,7 @@
   cursor: pointer;
   position: absolute;
   content: url('../../images/burger-menu.svg');
-  z-index: 1;
+  z-index: 999;
 }
 
 #menu-toggle {
@@ -36,7 +36,7 @@
   padding: 70px 60px 50px 70px;
   border-bottom-left-radius: 20px;
   gap: 56px;
-  z-index: 0;
+  z-index: 998;
 }
 
 .menu .nav {
